--- a/public/css/pages/admin.css
+++ b/public/css/pages/admin.css
@@ -31,6 +31,7 @@
     flex-basis: 529.765px;
     border-radius: 6px;
     border: 2px solid var(--dark-bg-solid);
+    padding-left: 20px;
 }
 
 .listProducto {
@@ -56,14 +57,16 @@
     display: grid;
     max-width: 1100px;
     margin-left: 20px;
-    grid-template-columns: 1fr 3fr 5fr 4fr 1fr 1fr;
-    height: 29px;
+    grid-template-columns: 1fr 3fr 5fr 3fr 1fr 1fr;
+    row-gap: 20px;
     align-items: center;
     justify-content: flex-end;
     margin-bottom: 20px;
+    margin-top: 40px;
+   
 }
 
-.tablaItems p {
+.tablaTitle{
     color: var(--dark-solid);
     font-size: 24px;
     font-style: normal;
@@ -72,17 +75,7 @@
     letter-spacing: 0.96px;
 }
 
-.tablaItemsOl {
-    display: grid;
-    max-width: 1100px;
-    margin-left: 20px;
-    grid-template-columns: 1fr 3fr 5fr 4fr 1fr 1fr;
-    height: 61px;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.tablaItemsOl p {
+.tablaContent {
     color: var(--dark-solid);
     font-size: 24px;
     font-style: normal;
