--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -61,9 +61,9 @@
                             <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="<%= item.img_front %>"
+                                    <img class="card-item__img--front" src="/img<%= item.image_front %>"
                                         alt="<%= item.product_description %>">
-                                    <img class="card-item__img--back" src="<%= item.img_back %>"
+                                    <img class="card-item__img--back" src="/img<%= item.image_back %>"
                                         alt="<%= item.product_description %>">
                                 </picture>
                                 <div class="card-item__content">
@@ -73,7 +73,7 @@
                                     <h4 class="card-item__name">
                                         <%= item.product_name %>
                                     </h4>
-                                    <p class="card-item__price">$ <%= item.product_price %>
+                                    <p class="card-item__price">$ <%= item.price %>
                                     </p>
                                     <p class="card-item__promo">
                                         <%= item.dues %> CUOTAS SIN INTERÉS
