--- a/src/views/components/slider.ejs
+++ b/src/views/components/slider.ejs
@@ -8,15 +8,15 @@
                     <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
                         <picture class="card-item__cover">
                             <span class="card-item__tag">NUEVO</span>
-                            <img class="card-item__img--front" src="<%= item.img_front %>"
+                            <img class="card-item__img--front" src="/img<%= item.image_front %>"
                                 alt="figura coleccionable funko star wars trooper">
-                            <img class="card-item__img--back" src="<%= item.img_back %>"
+                            <img class="card-item__img--back" src="/img<%= item.image_back %>"
                                 alt="figura coleccionable funko star wars trooper box">
                         </picture>
                         <div class="card-item__content">
                             <p class="card-item__licence"><%= item.licence_name %></p>
                             <h4 class="card-item__name"><%= item.product_name %></h4>
-                            <p class="card-item__price">$ <%= item.product_price %></p>
+                            <p class="card-item__price">$ <%= item.price %></p>
                             <p class="card-item__promo"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                         </div>
                     </a>
