se relaciono las paginas shop, home, edit y admin con la base de datos

--- a/public/css/pages/home.css
+++ b/public/css/pages/home.css
@@ -130,10 +130,12 @@ z-index: 4;
 
 .card-item__cover img {
     animation: fade .7s;
+    width: 100%;
 }
 
 .card-item__img--back {
     display: none;
+   
 }
 
 .card-item__cover:hover .card-item__img--back {
@@ -142,6 +144,7 @@ z-index: 4;
 
 .card-item__cover:hover .card-item__img--front {
     display: none;
+    
 }
 
 .card-item__content {
