--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -67,9 +67,7 @@
                                         alt="<%= item.product_description %>">
                                 </picture>
                                 <div class="card-item__content">
-                                    <p class="card-item__licence">
-                                        <%= item.licence_name %>
-                                    </p>
+                                    <p class="card-item__licence"><%= item.licence_name%></p>
                                     <h4 class="card-item__name">
                                         <%= item.product_name %>
                                     </h4>
