--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -8,20 +8,22 @@
         </section><!-- fin de la primera fila -->
 
         <section class="formItem"><!-- inicio de la segunda fila -->
-            <form action="#">
-                <label for="categoria">Categoría:</label>
+            <form action="/admin/edit" method="post" enctype="application/x-www-form-urlencoded">
+                <label for="collection">Categoría:</label>
                 <select id="categoria" name="categoria">
-                    <option value="#">Figuras</option>
-                    <option value="#">seleccionar</option>
-                    <option value="#">seleccionar</option>
+                    <option value="" disabled selected hidden>Seleccionar</option>
+                    <option value="Funkos">Figuras coleccionables</option>
+                    <option value="Llaveros">Llaveros</option>
+                    <option value="Remeras">Remeras</option>
                 </select>
             </form>
             <form action="#">
                 <label for="Licencia">Licencia:</label>
                 <select id="Licencia" name="Licencia">
-                    <option value="#">Naruto Shippuden</option>
-                    <option value="#">seleccionar</option>
-                    <option value="#">seleccionar</option>
+                    <option value="" disabled selected hidden>Seleccionar</option>
+                    <option value="starwars">Star Wars</option>
+                    <option value="pokemon">pokemon</option>
+                    <option value="harrypotter">Harry Potter</option>
                 </select>
             </form>
         </section><!-- fin de la segunda fila -->
@@ -29,32 +31,32 @@
         <section><!-- inicio de la tercera fila -->
             <form action="#">
                 <label for="nombre del producto" class="catalogoItem">Nombre del producto:</label>
-                <input class="catalogoItemOk" type="text" name="producto" value="Kakashi Hatake Shippuden Saga">
+                <input class="catalogoItemOk" type="text" name="producto" value="<%= item.product_name %>">
             </form>
         </section><!-- fin de la tercera fila -->
 
         <section><!-- inicio de la cuarta fila -->
-            <textarea class="caracteProduc" name="comentario" rows="10" cols="40">Figura Funko coleccionable de Kakashi Hatake de la saga Naruto Shipudden invocando chidori.  </textarea>
+            <textarea class="caracteProduc" name="comentario" rows="10" cols="40"><%= item.product_description %> </textarea>
         </section><!-- fin de la cuarta fila -->
 
         <section style="margin-top: 19px"><!-- inicio de la quinto fila -->
             <form action="#">
                 <label class="catalogoItem" for="sku">SKU:</label>
-                <input class="cataLog" style="max-width: 130px" type="text" name="sku" value="NAR001012">
+                <input class="cataLog" style="max-width: 130px" type="text" name="sku" value="<%= item.sku %>">
                 <label class="catalogoItem" style="margin-left: 56.48px" for="precio">Precio:</label>
-                <input class="cataLog" style="max-width: 130px" type="text" name="precio" value="$ 1.799,00">
+                <input class="cataLog" style="max-width: 130px" type="text" name="precio" value="$<%= item.price %>">
                 <label class="catalogoItem" style="margin-left: 56.48px" for="stock:">Stock:</label>
-                <input class="cataLog" style="max-width: 55px; text-align: center " type="text" name="stock:" value="10">
+                <input class="cataLog" style="max-width: 55px; text-align: center " type="text" name="stock:" value="<%= item.stock %>">
             </form>
         </section><!-- fin de la quinto fila -->
 
         <section style="margin-top: 51.58px; margin-bottom: 51.58px;"><!-- inicio de la sexta fila -->
             <form action="#">
                 <label class="catalogoItem" for="descuento">Descuento:</label>
-                <input class="cataLog" style="max-width: 55px; text-align: center " type="text" name="descuento" value="10%">
+                <input class="cataLog" style="max-width: 55px; text-align: center " type="text" name="descuento" value="<%= item.discount %>%">
                 <label class="catalogoItem" style="margin-left: 15px" for="cuotas">Cuotas:</label>
                 <select class="selectCuotas" id="cuotas" name="Licencia">
-                    <option value="#">6 Cuotas sin interés</option>
+                    <option value="#"><%= item.dues %> Cuotas sin interés</option>
                     <option value="#">seleccionar</option>
                     <option value="#">seleccionar</option>
                 </select>
@@ -68,12 +70,12 @@
             </form>
             <section class="itemParaAgregar">
                 <article>
-                    <img class="item_img_edit" src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura.png"
+                    <img class="item_img_edit" src="/img<%= item.image_front %>"
                         alt="Figura de funkos de naruko de frente">
                     <p class="descripIman">Frente</p>
                 </article>
                 <article>
-                    <img class="item_img_edit" src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura-box.jpg" alt="Figura de funkos de naruko de dorso">
+                    <img class="item_img_edit" src="/img<%= item.image_back %>">
                     <p class="descripIman">Dorso</p>
                 </article>
             </section>
