--- a/public/css/pages/edit.css
+++ b/public/css/pages/edit.css
@@ -46,7 +46,7 @@
     width: 300px;
     font-size: var(--font-medium);
     color: var(--dark-solid);
-    text-align: right;
+    text-align: left;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
